# ttyOverMSSQL

./: LICENSE  README.md  pyproject.toml  requirements.txt
ttyovermssql/: ttyOverMSSQL.py
